# memorize

./: .gitignore  Cargo.toml  PLAN.md  README.md
.cargo/: config.toml
bench/: baseline-memorize-llamacpp.md  baseline-memorize.md  code-eval.json  code-eval.md  code-queries.toml  embed-sweep-bge-m3.md  embed-sweep-bge-small-q8.md  embed-sweep-candle-accelerate.md  embed-sweep-candle.md  embed-sweep-llama.md  embed-sweep-minilm-q8.md  embed-sweep-q.md  embed-sweep.md  slate-after-tokencap.md  slate-instrumented.md  slate-sample.md  slate-tokens-after.md  slate-tokens-final.md  slate-tokens.md
crates/memorize-cli/: Cargo.toml
crates/memorize-cli/src/: bench.rs  capture.rs  client.rs  config.rs  install_hooks.rs  install_launchd.rs  main.rs
crates/memorize-code/: Cargo.toml
crates/memorize-code/src/: lib.rs
crates/memorize-core/: Cargo.toml
crates/memorize-core/src/: dedup.rs  lib.rs  privacy.rs  types.rs
crates/memorize-embed/: Cargo.toml  README.md  build.rs
crates/memorize-embed/src/: lib.rs
crates/memorize-eval/: Cargo.toml
crates/memorize-eval/src/: cache.rs  code_eval.rs  dataset.rs  harness.rs  main.rs  metrics.rs  report.rs
crates/memorize-mcp/: Cargo.toml
crates/memorize-mcp/src/: lib.rs
crates/memorize-recall/: Cargo.toml
crates/memorize-recall/src/: code.rs  diversify.rs  expand.rs  lib.rs  pipeline.rs  rrf.rs
crates/memorize-server/: Cargo.toml
crates/memorize-server/src/: code_indexer.rs  config.rs  indexer_log.rs  indexer_status.rs  lib.rs  routes.rs  state.rs
crates/memorize-store/: Cargo.toml
crates/memorize-store/src/: fts.rs  lib.rs  schema.rs  store.rs  synonyms_seed.rs
