[package]
name = "memorize-eval"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "memorize-eval"
path = "src/main.rs"

[dependencies]
memorize-core = { workspace = true }
memorize-store = { workspace = true }
memorize-embed = { workspace = true }
memorize-recall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
duckdb = { workspace = true }
