[package]
name = "memorize-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
memorize-core = { workspace = true }
memorize-store = { workspace = true }
memorize-embed = { workspace = true }
memorize-recall = { workspace = true }
tiny_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
