[package]
name = "memorize-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
memorize-core = { workspace = true }
memorize-store = { workspace = true }
memorize-embed = { workspace = true }
memorize-recall = { workspace = true }
memorize-code = { workspace = true }
tiny_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
toml = { workspace = true }
ignore = { workspace = true }
