[package]
name = "memorize-store"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
memorize-core = { workspace = true }
duckdb = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tantivy = { workspace = true }
